@@ -8,6 +8,7 @@ Version 0.5.0~dev
 	* Add a low-bitrate source type, useful to avoid timeouts on audio
 	  streams.
 	* Added basic support for shoutcast metadata relaying.
+	* Added client buffer queue sizes statistics to JSON status.
 
 Version 0.4.0 Released on 2011/11/22
 
